@@ -3,7 +3,7 @@
 # RCS to ChangeLog generator
 
 # Copyright (C) 1992, 1993, 1994, 1995, 1996, 1997, 1998, 2001, 2002, 2003,
-#               2004, 2005, 2006, 2007, 2008, 2009
+#               2004, 2005, 2006, 2007, 2008, 2009, 2010
 #               Free Software Foundation, Inc.
 
 # Author: Paul Eggert <eggert@twinsun.com>
@@ -22,7 +22,7 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 
-Copyright='Copyright (C) 2009 Free Software Foundation, Inc.
+Copyright='Copyright (C) 2010 Free Software Foundation, Inc.
 This program comes with NO WARRANTY, to the extent permitted by law.
 You may redistribute copies of this program
 under the terms of the GNU General Public License.
