@@ -1,7 +1,7 @@
 ;;; version.el --- record version number of Emacs -*- no-byte-compile: t -*-
 
 ;; Copyright (C) 1985, 1992, 1994, 1995, 1999, 2000, 2001, 2002, 2003,
-;;   2004, 2005, 2006, 2007, 2008, 2009
+;;   2004, 2005, 2006, 2007, 2008, 2009, 2010
 ;;   Free Software Foundation, Inc.
 
 ;; Maintainer: FSF
@@ -29,7 +29,7 @@
 
 ;;; Code:
 
-(defconst emacs-copyright "Copyright (C) 2009 Free Software Foundation, Inc." "\
+(defconst emacs-copyright "Copyright (C) 2010 Free Software Foundation, Inc." "\
 Short copyright string for this version of Emacs.")
 
 (defconst emacs-version "23.1.91" "\
