@@ -3,4 +3,4 @@
 CFBundleName = "Emacs";
 CFBundleShortVersionString = "Version 23.1.91";
 CFBundleGetInfoString = "Emacs version 23.1.91, NS Windowing";
-NSHumanReadableCopyright = "Copyright (C) 2009 Free Software Foundation, Inc.";
+NSHumanReadableCopyright = "Copyright (C) 2010 Free Software Foundation, Inc.";
